--- a/views/guests.pug
+++ b/views/guests.pug
@@ -8,8 +8,12 @@ html
     h1 Guest List: 
 
     div#list
-      
-        //- each imgName in imgNames
-        //-   img(src=`/uploads/${imgName}`)
+      div Attendees
+      each guest in attending
+        span= `${guest.name}`
+          span= `Guests, ${guest.guests}`
+      div Losers
+      each guest in notAttending
+        span= `${guest.name}`
 
-    //- script(src="app.js")
+    a(href="/") Go Back to the Form
