--- a/views/reply.pug
+++ b/views/reply.pug
@@ -6,5 +6,7 @@ html
 
   body
     h1 Thanks for RSVPing!
-    a(href="/guests") Look to see who else is going! 
-    a(href="/") Go Back to the Form
+    div
+      a(href="/guests") Look to see who else is going! 
+    div
+      a(href="/") Go Back to the Form
